# blog

./: Cargo.toml  README.org  Trunk.toml  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: gh-pages-deploy.yml
assets/blog/: test.org
assets/posts/: 02022025_super_thought.org  add_thumbnails.org  all_works.org  dumbdroid.org  dumbphones.org  set_theme.org  test.org  thoughts.org
src/: lib.rs  main.rs
src/components/: comments.rs  mod.rs  sort.rs  theme.rs
src/core/: constants.rs  mod.rs  post.rs
src/pages/: about.rs  blog.rs  comments.rs  mod.rs  post.rs
style/: input.css  output.css
