[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
include_dir = "0.7.4"
leptos = { version = "0.8.2", features = ["csr", "nightly"] }
leptos_router = "0.8.2"
orgize = "0.9.0"
