[package]
name = "blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
include_dir = { version = "0.7.4", features = ["metadata"] }
leptos = { version = "0.8.2", features = ["csr", "nightly"] }
leptos_router = "0.8.2"
orgize = { version = "=0.10.0-alpha.10" }
